# api/handlers/field.go
@@ -14,6 +14,7 @@ import (
 
 // CreateField godoc
 // @Security ApiKeyAuth
+// @Param resource_id header string true "resource_id"
 // @ID create_field
 // @Router /v1/field [POST]
 // @Summary Create field
@@ -90,6 +91,7 @@ func (h *Handler) CreateField(c *gin.Context) {
 
 // GetAllFields godoc
 // @Security ApiKeyAuth
+// @Param resource_id header string true "resource_id"
 // @ID get_all_fields
 // @Router /v1/field [GET]
 // @Summary Get all fields
@@ -167,6 +169,7 @@ func (h *Handler) GetAllFields(c *gin.Context) {
 
 // UpdateField godoc
 // @Security ApiKeyAuth
+// @Param resource_id header string true "resource_id"
 // @ID update_field
 // @Router /v1/field [PUT]
 // @Summary Update field
@@ -245,6 +248,7 @@ func (h *Handler) UpdateField(c *gin.Context) {
 
 // DeleteField godoc
 // @Security ApiKeyAuth
+// @Param resource_id header string true "resource_id"
 // @ID delete_field
 // @Router /v1/field/{field_id} [DELETE]
 // @Summary Delete Field
