# api/handlers/object.go
@@ -17,6 +17,7 @@ import (
 
 // CreateObject godoc
 // @Security ApiKeyAuth
+// @Param resource_id header string true "resource_id"
 // @ID create_object
 // @Router /v1/object/{table_slug}/ [POST]
 // @Summary Create object
@@ -124,6 +125,7 @@ func (h *Handler) CreateObject(c *gin.Context) {
 
 // GetSingle godoc
 // @Security ApiKeyAuth
+// @Param resource_id header string true "resource_id"
 // @ID get_object_by_id
 // @Router /v1/object/{table_slug}/{object_id} [GET]
 // @Summary Get object by id
@@ -194,6 +196,7 @@ func (h *Handler) GetSingle(c *gin.Context) {
 
 // UpdateObject godoc
 // @Security ApiKeyAuth
+// @Param resource_id header string true "resource_id"
 // @ID update_object
 // @Router /v1/object/{table_slug} [PUT]
 // @Summary Update object
@@ -280,6 +283,7 @@ func (h *Handler) UpdateObject(c *gin.Context) {
 
 // DeleteObject godoc
 // @Security ApiKeyAuth
+// @Param resource_id header string true "resource_id"
 // @ID delete_object
 // @Router /v1/object/{table_slug}/{object_id} [DELETE]
 // @Summary Delete object
@@ -354,6 +358,7 @@ func (h *Handler) DeleteObject(c *gin.Context) {
 
 // GetList godoc
 // @Security ApiKeyAuth
+// @Param resource_id header string true "resource_id"
 // @ID get_list_objects
 // @Router /v1/object/get-list/{table_slug} [POST]
 // @Summary Get all objects
@@ -428,6 +433,7 @@ func (h *Handler) GetList(c *gin.Context) {
 
 // GetListInExcel godoc
 // @Security ApiKeyAuth
+// @Param resource_id header string true "resource_id"
 // @ID get_list_objects_in_excel
 // @Router /v1/object/excel/{table_slug} [POST]
 // @Summary Get all objects in excel
@@ -494,6 +500,7 @@ func (h *Handler) GetListInExcel(c *gin.Context) {
 
 // DeleteManyToMany godoc
 // @Security ApiKeyAuth
+// @Param resource_id header string true "resource_id"
 // @ID delete_many2many
 // @Router /v1/many-to-many [DELETE]
 // @Summary Delete Many2Many
@@ -548,6 +555,7 @@ func (h *Handler) DeleteManyToMany(c *gin.Context) {
 
 // AppendManyToMany godoc
 // @Security ApiKeyAuth
+// @Param resource_id header string true "resource_id"
 // @ID append_many2many
 // @Router /v1/many-to-many [PUT]
 // @Summary Update many-to-many
@@ -602,6 +610,7 @@ func (h *Handler) AppendManyToMany(c *gin.Context) {
 
 // GetObjectDetails godoc
 // @Security ApiKeyAuth
+// @Param resource_id header string true "resource_id"
 // @ID get_object_details
 // @Router /v1/object/object-details/{table_slug} [POST]
 // @Summary Get object details
@@ -669,6 +678,7 @@ func (h *Handler) GetObjectDetails(c *gin.Context) {
 
 // UpsertObject godoc
 // @Security ApiKeyAuth
+// @Param resource_id header string true "resource_id"
 // @ID upsert_object
 // @Router /v1/object-upsert/{table_slug} [POST]
 // @Summary Upsert object
@@ -788,6 +798,7 @@ func (h *Handler) UpsertObject(c *gin.Context) {
 
 // MultipleUpdateObject godoc
 // @Security ApiKeyAuth
+// @Param resource_id header string true "resource_id"
 // @ID multiple_update_object
 // @Router /v1/object/multiple-update/{table_slug} [PUT]
 // @Summary Multiple Update object
@@ -854,6 +865,7 @@ func (h *Handler) MultipleUpdateObject(c *gin.Context) {
 
 // GetFinancialAnalytics godoc
 // @Security ApiKeyAuth
+// @Param resource_id header string true "resource_id"
 // @ID get_financial_analytics
 // @Router /v1/object/get-financial-analytics/{table_slug} [POST]
 // @Summary Get financial analytics
